@@ -2,7 +2,7 @@ Package: googleVis
 Type: Package
 Title: Interface between R and the Google Chart Tools
 Version: 0.5.0
-Date: 2014-02-08
+Date: 2014-02-09
 Authors@R: c(person("Markus", "Gesmann", role = c("aut", "cre"),
     email = "markus.gesmann@googlemail.com"),
     person("Diego", "de Castillo", role = "aut",
@@ -31,3 +31,4 @@ URL: http://code.google.com/p/google-motion-charts-with-r/,
 BugReports: http://code.google.com/p/google-motion-charts-with-r/issues/list
 LazyLoad: yes
 LazyData: yes
+VignetteBuilder: knitr
